# Hyperscan.WinRT

./: .gitignore  Hyperscan.WinRT.sln  README.md
Hyperscan.Console/: Hyperscan.Console.cpp  Hyperscan.Console.vcxproj  Hyperscan.Console.vcxproj.filters  VCCommon.props  VCx86.props
Hyperscan.Sample.Rust/: .gitignore  Cargo.toml  Hyperscan.Sample.Rust.vcxproj  Hyperscan.Sample.Rust.vcxproj.filters  build.rs
Hyperscan.Sample.Rust/src/: hyperscan.rs  main.rs
Hyperscan.Tests/: Hyperscan.Tests.csproj
Hyperscan.WinRT/: BlockScanner.cpp  BlockScanner.h  Compiler.cpp  Compiler.h  ExpressionExtended.cpp  ExpressionExtended.h  ExpressionInfo.cpp  ExpressionInfo.h  Global.cpp  Global.h  Hyperscan.WinRT.vcxproj  Hyperscan.WinRT.vcxproj.filters  Hyperscan.idl  MatchEventArgs.cpp  MatchEventArgs.h  Pattern.cpp  Pattern.h  PlatformInfo.cpp  PlatformInfo.h  SScanner.cpp  SScanner.h  Settings.cpp  Settings.h  StreamScanner.cpp  StreamScanner.h  VectorScanner.cpp  VectorScanner.h  packages.config  pch.h
HyperscanTests/: BlockScanner_ComplieShould.cs  Hyperscan.Tests.csproj
