[package]
name = "hyperscan_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-core]
version = "*"
[dependencies.windows]
version = "*"
features = [
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Security_Cryptography"
]

[build-dependencies]
windows-targets = "*"
windows-bindgen = "*"